inter/Tests/Invalid/cantsubkind.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_number int32
	kind K_blurg <= K_number
